# Pipe_monitor

./: CMakeLists.txt  README.md  partitions.csv  partitions_custom.csv  sdkconfig  sdkconfig.defaults
components/: dht.c  dht.h
main/: CMakeLists.txt  config.h  dht.c  dht.h  main.c
